--- a/PuzzlePublisher.sketchplugin/Contents/Sketch/manifest.json
+++ b/PuzzlePublisher.sketchplugin/Contents/Sketch/manifest.json
@@ -3,7 +3,7 @@
   "description": "Generates and publishes a HTML clickable prototype",
   "author" : "Maxim Bazarov and Alexey Kalenyuk",
   "homepage": "https://github.com/ingrammicro/puzzle-publisher",  
-  "identifier" : "com.ingrammicro.puzzle.publisher",
+  "identifier" : "com.cloudblue.sketch.exporter",
   "appcast": "https://raw.githubusercontent.com/ingrammicro/puzzle-publisher/master/appcast.xml",
   "compatibleVersion": 3,
   "bundleVersion": 1,
