--- a/PuzzlePublisher.sketchplugin/Contents/Sketch/manifest.json
+++ b/PuzzlePublisher.sketchplugin/Contents/Sketch/manifest.json
@@ -83,13 +83,6 @@
       "shortcut" : "command alt p", 
       "name" : "📡 Publish HTML",
       "identifier" : "publish"
-    },
-    {
-        "script" : "exporter/exporter-run.js",
-        "handler" : "announce11",
-        "shortcut" : "", 
-        "name" : "ℹ️ Show last announcement",
-        "identifier" : "announce11"
     }
   ],
   "menu": {
@@ -106,9 +99,7 @@
       "confDocument",
       "-",
       "confPluginExport",
-      "confPluginPublishing",
-      "-",
-      "announce11"
+      "confPluginPublishing"
     ]
   }
 }
