Trying to fix autoupdate

--- a/PuzzlePublisher.sketchplugin/Contents/Sketch/manifest.json
+++ b/PuzzlePublisher.sketchplugin/Contents/Sketch/manifest.json
@@ -2,11 +2,11 @@
   "name": "Puzzle Publisher",
   "description": "Generates and publishes a HTML clickable prototype",
   "author" : "Maxim Bazarov and Alexey Kalenyuk",
+  "authorEmail" : "max@bazarov.ru",
   "homepage": "https://github.com/ingrammicro/puzzle-publisher",  
   "identifier" : "com.cloudblue.sketch.exporter",
   "appcast": "https://raw.githubusercontent.com/ingrammicro/puzzle-publisher/master/appcast.xml",
-  "compatibleVersion": 3,
-  "bundleVersion": 1,
+  "compatibleVersion": "52",
   "version" : "11.5.0",
   "icon": "icon.png",
   "commands" : [   
