--- a/PuzzlePublisher.sketchplugin/Contents/Sketch/manifest.json
+++ b/PuzzlePublisher.sketchplugin/Contents/Sketch/manifest.json
@@ -7,7 +7,7 @@
     "identifier": "com.cloudblue.sketch.exporter",
     "appcast": "https://raw.githubusercontent.com/ingrammicro/puzzle-publisher/master/appcast.xml",
     "compatibleVersion": "52",
-    "version": "14.8.0",
+    "version": "14.8.1",
     "icon": "icon.png",
     "commands": [
         {
@@ -95,6 +95,12 @@
             "identifier": "publish"
         },
         {
+            "script": "menu-cmd-publish-miro.js",
+            "handler": "onRun",
+            "name": "📡 Publish to Miro",
+            "identifier": "publishMiro"
+        },
+        {
             "script": "menu-cmd-other.js",
             "handler": "showChangeLog",
             "shortcut": "",
@@ -109,6 +115,7 @@
             "exportToHTMLAdv",
             "-",
             "publish",
+            "publishMiro",
             "-",
             "externalLink",
             "confLayer",
