--- a/comments/backend/config/forums/1234567890/forum.config
+++ b/comments/backend/config/forums/1234567890/forum.config
@@ -1,1 +1,1 @@
-{"name":"default","created":"2021-01-22 14:53:52","pageCounter":1,"pages":[]}
+{"name":"default","created":"2021-01-22 14:53:52","pageCounter":2,"pages":{"https:\/\/teplo500.ru\/comments\/frontend\/test.html":1}}
