--- a/PuzzlePublisher.sketchplugin/Contents/Sketch/manifest.json
+++ b/PuzzlePublisher.sketchplugin/Contents/Sketch/manifest.json
@@ -1,13 +1,13 @@
 {
     "name": "Puzzle Publisher",
     "description": "Generates and publishes a HTML clickable prototype",
-    "author": "Maxim Bazarov and Alexey Kalenyuk",
+    "author": "Maxim Bazarov, Alexey Kalenyuk and Kostantin Smirnov",
     "authorEmail": "mbazarov@gmail.com",
     "homepage": "https://github.com/ingrammicro/puzzle-publisher",
     "identifier": "com.cloudblue.sketch.exporter",
     "appcast": "https://raw.githubusercontent.com/ingrammicro/puzzle-publisher/master/appcast.xml",
     "compatibleVersion": "52",
-    "version": "16.15.0",
+    "version": "16.16.0",
     "icon": "icon.png",
     "commands": [
         {
